SERVER-8188: make cursor timeout configurable on server