src/mongo/bson/bson-inl.h
@@ -1003,6 +1003,13 @@ dodouble:
         return true;
     }
 
+    template<> inline bool BSONElement::coerce<long long>( long long* out ) const {
+        if ( !isNumber() )
+            return false;
+        *out = numberLong();
+        return true;
+    }
+
     template<> inline bool BSONElement::coerce<double>( double* out ) const {
         if ( !isNumber() )
             return false;
